@@ -27,29 +27,35 @@
       "type" : {
         "type" : "array",
         "items" : "Node"
-      }
+      },
+      "default" : [ ]
     } ]
   }, {
     "type" : "record",
     "name" : "Interop",
     "fields" : [ {
       "name" : "intField",
-      "type" : "int"
+      "type" : "int",
+      "default" : 1
     }, {
       "name" : "longField",
-      "type" : "long"
+      "type" : "long",
+      "default" : -1
     }, {
       "name" : "stringField",
       "type" : "string"
     }, {
       "name" : "boolField",
-      "type" : "boolean"
+      "type" : "boolean",
+      "default" : false
     }, {
       "name" : "floatField",
-      "type" : "float"
+      "type" : "float",
+      "default" : 0.0
     }, {
       "name" : "doubleField",
-      "type" : "double"
+      "type" : "double",
+      "default" : -1.0E12
     }, {
       "name" : "nullField",
       "type" : "null"
@@ -58,7 +64,11 @@
       "type" : {
         "type" : "array",
         "items" : "double"
-      }
+      },
+      "default" : [ {
+        "label" : "foo",
+        "children" : [ ]
+      } ]
     }, {
       "name" : "mapField",
       "type" : {
